--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -27,7 +27,7 @@
                     <button type="button" class="btn btn-success" [routerLink]="['/reg']">Register</button>
                 </div>
             </form><br>
-            <b *ngIf="val" style="color: red">Invalid Credentials</b>
+            <b *ngIf="val" style="color: red">Your Username or Password is invalid</b>
         </div>
     </div>
 
