--- a/src/app/reg/reg.component.html
+++ b/src/app/reg/reg.component.html
@@ -35,8 +35,8 @@
       <button class="btn btn-success"><b>Register</b></button>&nbsp;
   </div>
   </form><br>
- 
-    
+  <b *ngIf="val" style="color: red">Username or Email already exists</b>
+  <!-- <b *ngIf="val1" style="color: red"> already exists</b> -->
   </div>
     </div>
    
