--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -11,7 +11,7 @@
                     <input type="text" formControlName="uname" class="form-control"
                         [ngClass]="{ 'is-invalid': submitted && f.uname.errors }">
                     <div *ngIf="submitted && f.uname.errors" class="invalid-feedback">
-                        <div *ngIf="f.uname.errors.required">User Name is required</div>
+                        <div *ngIf="f.uname.errors.required">User Name is required*</div>
                     </div>
                 </div>
                 <div class="form-group">
@@ -19,7 +19,7 @@
                     <input type="password" formControlName="password" class="form-control"
                         [ngClass]="{ 'is-invalid': submitted && f.password.errors }">
                     <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
-                        <div *ngIf="f.password.errors.required">Password is required</div>
+                        <div *ngIf="f.password.errors.required">Password is required*</div>
                     </div>
                 </div>
                 <div class="form-group">
