--- a/src/app/reg/reg.component.html
+++ b/src/app/reg/reg.component.html
@@ -5,26 +5,26 @@
   <h5 class="text-center"><img src="https://s3.amazonaws.com/myamcatimages/company/images/8527.png" height="50px"/></h5><br/>
   <form [formGroup]="form" (ngSubmit)="onSignup()">
     <div class="form-group">
-        <label>Email:</label>
-        <input type="text" formControlName="email" class="form-control" [ngClass]="{ 'has-danger': submitted && sf.email.errors }" />
-        <div *ngIf="submitted && sf.email.errors" class="err">
+        <label><b style="color: green">Email:</b></label>
+        <input type="text" formControlName="email" class="form-control" [ngClass]="{ 'is-invalid': submitted && sf.email.errors }" />
+        <div *ngIf="submitted && sf.email.errors" class="invalid-feedback">
             <div *ngIf="sf.email.errors.required">Email is required*</div>
             <div *ngIf="sf.email.errors.email">Email must be a valid email address</div>
         </div>
     </div>
   <div class="form-group">
-      <label>Username:</label>
-      <input type="text" formControlName="uname" class="form-control" [ngClass]="{ 'has-danger': submitted && sf.uname.errors }" />
-      <div *ngIf="submitted && sf.uname.errors" class="err">
+      <label><b style="color: green">Username:</b></label>
+      <input type="text" formControlName="uname" class="form-control" [ngClass]="{ 'is-invalid': submitted && sf.uname.errors }" />
+      <div *ngIf="submitted && sf.uname.errors" class="invalid-feedback">
         <div *ngIf="sf.uname.errors.required">Username is required*</div>
         <div *ngIf="sf.uname.errors.minlength">Atleast 6 characters*</div>
     </div>
   </div>
   
   <div class="form-group">
-      <label>Password:</label>
-      <input type="text" formControlName="password" class="form-control" [ngClass]="{ 'has-danger': submitted && sf.password.errors }" />
-      <div *ngIf="submitted && sf.password.errors" class="err">
+      <label><b style="color: green">Password:</b></label>
+      <input type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && sf.password.errors }" />
+      <div *ngIf="submitted && sf.password.errors" class="invalid-feedback">
         <div *ngIf="sf.password.errors.required">Password is required*</div>
         <div *ngIf="sf.password.errors.minlength">Atleast 6 characters*</div>
     </div>
@@ -32,7 +32,8 @@
   
   
   <div class="form-group">
-      <button class="btn btn-success"><b>Register</b></button>&nbsp;
+      <button class="btn btn-success">Register</button>&nbsp;
+      <button type="button" class="btn btn-success" [routerLink]="['/login']">Login</button>
   </div>
   </form><br>
   <b *ngIf="val" style="color: red">Username or Email already exists</b>
