--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -22,8 +22,8 @@
   <h4 class="text-center">Ojas welcomes you!</h4>
   <h4 class="text-center">We build your future!</h4>
   <br />
-  <h6 class="text-center"><button class="btn btn-success" routerLink="job" *ngIf="status" (click)="apply()">Apply for
-      Job</button></h6>
+  <!-- <h6 class="text-center"><button class="btn btn-success" routerLink="job" *ngIf="status" (click)="apply()">Apply for
+      Job</button></h6> -->
     
   <router-outlet></router-outlet>
 </div>
